# astro-friend

./: README.md
astrology-api/: Pipfile  README.md  pyproject.toml
astrology-api/astrology_lib/: __init__.py  calculator.py
astrology-api/astrology_lib/types/: __init__.py
astrology-api/astrology_lib/utils/: __init__.py
